<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    android:background="@color/onBoard_background"
    tools:context=".view.ui.fragment.onboard.OnBoardFragment">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dotsIndicator"
        app:dotsColor="@color/gray"
        app:selectedDotColor="@color/onBoard_txt"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        app:dotsSize="10dp"
        app:dotsSpacing="6dp"
        app:dotsCornerRadius="4dp"
        />

    <TextView
        android:id="@+id/txt_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/onBoard_skip"
        android:textColor="@color/onBoard_txt"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="60dp"
        android:text="@string/onBoard_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:paddingHorizontal="40dp"
        android:paddingVertical="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="50dp"
        android:background="@drawable/btn_skip"
        android:text="@string/onBoard_start"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        />

</FrameLayout>